Bug 94699 - [BSW] igt / gem_userptr_blits / sync-unmap-cycles fails
Summary: [BSW] igt / gem_userptr_blits / sync-unmap-cycles fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL: https://patchwork.freedesktop.org/pat...
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-25 15:39 UTC by cprigent
Modified: 2018-02-13 16:36 UTC (History)
1 user (show)

See Also:
i915 platform: BSW/CHT
i915 features: GEM/Other


Attachments
BSW-gem_userptr_blits-sync-unmap-cycles-kern.log (157.02 KB, text/plain)
2016-03-25 15:39 UTC, cprigent
no flags Details
BSW-gem_userptr_blits-sync-unmap-cycles-output (6.90 KB, text/plain)
2016-03-25 15:39 UTC, cprigent
no flags Details

Description cprigent 2016-03-25 15:39:35 UTC
Created attachment 122557 [details]
BSW-gem_userptr_blits-sync-unmap-cycles-kern.log

Hardware: 
Motherboard: Aspire XC-704 
cpu model name : Intel(R) Pentium(R) CPU N3700 @ 1.60GHz 
cpu model : 76 
cpu family : 6 
Graphic card: Device 22b1 (rev 21)

Software:
Bios: R01-A2
kernel nightly 4.5 10e913a  from https://cgit.freedesktop.org/cgit/?url=drm-intel/
  commit 10e913a48ca36790da9b58bed8729598ea79ebdb
  Author: Imre Deak <imre.deak@intel.com>
  Date:   Thu Mar 17 15:23:17 2016 +0200
  drm-intel-nightly: 2016y-03m-17d-13h-22m-41s UTC integration manifest
cairo 1.15.2 db8a7f1 from git://anongit.freedesktop.org/cairo
libdrm-2.4.67-7 49041c3 from git://anongit.freedesktop.org/mesa/drm
IGT 1.14 8f6ed9e from http://anongit.freedesktop.org/git/xorg/app/intel-gpu-tools.git

Steps:
------
1. Execute IGT test: gem_userptr_blits@sync-unmap-cycles

Actual result:
--------------
1. Test is Pass

Expected result:
----------------
1. Test is fail
Comment 1 cprigent 2016-03-25 15:39:52 UTC
Created attachment 122558 [details]
BSW-gem_userptr_blits-sync-unmap-cycles-output
Comment 2 Chris Wilson 2016-03-25 16:49:40 UTC
The issue is that mmap() is returning before we completely mark the objects as invalid (hence the subsequent execbuf manages to run instead of failing).
Comment 3 Chris Wilson 2016-03-25 18:13:38 UTC
https://patchwork.freedesktop.org/patch/78381/
Comment 4 Chris Wilson 2016-04-11 19:44:59 UTC
commit 393afc2c3fda670ff392725ca618e956d625b964
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Apr 5 14:59:59 2016 +0100

    drm/i915/userptr: Flush cancellations before mmu-notifier invalidate returns
Comment 5 Jari Tahvanainen 2017-07-03 13:42:16 UTC
verified based on the sync-unmap-cycles is pass with 4.12.0-rc1-drm-tip-ww20-commit-9b25870+ (BSW-1-BRASWELL)
Comment 6 Elizabeth 2018-02-13 16:36:49 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.